# tx-pane

./: .coveragerc  .dockerignore  .gitignore  .semgrepignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  run-coverage  run-tests  run-tests-docker  tx  tx-pane
.coverage-site/: sitecustomize.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/: compaction_samples.md  tx-doc-advanced.md  tx-doc-agent-playbook.md  tx-doc-compaction.md  tx-doc-comparison.md  tx-doc-reference.md  tx-doc-troubleshooting.md  tx-doc-use-cases.md
scripts/: generate_compaction_samples.py  semgrep
semgrep/: README.md  tx-conventions.yaml  tx-quality.yaml  tx-security.yaml
tests/: conftest.py  test_buffer.py  test_builtin_plugin_normalizers.py  test_busy.py  test_cli.py  test_compact_dedup.py  test_compact_e2e.py  test_compact_handle.py  test_compact_layers.py  test_compact_normalizer_engines.py  test_compact_savings.py  test_compact_stats.py  test_compact_telemetry.py  test_docs_help_contract.py  test_e2e_plan.py  test_integration.py  test_log_rotation_unit.py  test_log_unit.py  test_marker_unit.py  test_markers.py  test_nested_hook.py  test_normalizer_real.py  test_runner_unit.py  test_runs.py  test_security_unit.py  test_stage2.py  test_stage3.py  test_stage4.py  test_state.py  test_tail_logic.py  test_util.py  test_wait_unit.py
tx_compact/: __init__.py  api.py  budget.py  dedup.py  handle.py  layers.py  plugin_engine.py  registry.py  telemetry.py  tier.py  tokens.py  toml_engine.py
tx_core/: __init__.py  cli.py  config.py  constants.py  help_text.py  log.py  marker.py  (+9 more)
(+32 files in other folders)
